implemented dir , readdir , and all FILE functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "fs.h": "c"
+        "fs.h": "c",
+        "types.h": "c",
+        "string.h": "c"
     }
 }
